--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,9 @@
+html{
+   scroll-behavior: smooth;
+}
+
 body{
    min-width: 100%;
-   margin: 0;;
+   margin: 0;
+   background-color: #FAF9F6;
 }
