--- a/src/styles/navigationHeader.css
+++ b/src/styles/navigationHeader.css
@@ -10,6 +10,9 @@
    justify-content: space-between;
    align-items: center;
    box-shadow: 0px 5px 10px 0px #aaa;
+   position: fixed;
+   top: 0;
+   z-index: 1
 }
 
 .header-container input[type="checkbox"],
